//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto2";

package pojo;

import "com/sandpolis/core/proto/util/auth.proto";

option java_package = "com.sandpolis.core.proto.pojo";
option optimize_for = CODE_SIZE;

/**
 * The configuration of a Group.
 */
message GroupConfig {

    // The primary ID
    optional string id = 1;

    // The user-friendly name
    optional string name = 2;

    // The username of the user that owns this group
    optional string owner = 3;

    // The usernames of all group members
    repeated string member = 4;

    // The password mechanisms that belong to the group
    repeated util.PasswordContainer password_mechanism = 5;

    // The key mechanisms that belong to the group
    repeated util.KeyContainer key_mechanism = 6;
}

/**
 * Group statistics.
 */
message GroupStats {

    // The creation timestamp
    optional int64 ctime = 1;

    // The modification timestamp
    optional int64 mtime = 2;
}

/**
 * A Group container.
 */
message ProtoGroup {
    optional GroupConfig config = 1;
    optional GroupStats stats = 2;
}
